--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
                             <div class="contact-item">
                                 <div class="icon">
                                     <i class="fas fa-envelope"></i>
-                                    <span>Email <a href ="mailto:iankitasingh@gmail.com">: iankitasingh@gmail.com</span> 
+                                    <span>Email <a href ="mailto:iankitasingh12@gmail.com">: iankitasingh@gmail.com</span> 
                                 </div>
                                 <br>
                                 <br>
