--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
                             <div class="contact-item">
                                 <div class="icon">
                                     <i class="fas fa-envelope"></i>
-                                    <span>Email <a href ="mailto:iankitasingh12@gmail.com">: iankitasingh@gmail.com</span> 
+                                    <span>Email <a href ="mailto:iankitasingh12@gmail.com">: iankitasingh12@gmail.com</span> 
                                 </div>
                                 <br>
                                 <br>
@@ -396,7 +396,7 @@
                             <div class="contact-item">
                                 <div class="icon">
                                     <i class="fas fa-phone-alt"></i>
-                                    <span>Mobile Number :  06203617569</span>
+                                    <span>Mobile Number :  6203617569</span>
                                 </div>
                                 <br>
                                 <br>
