--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                         <img src="img/edtech.jpeg" alt="">
                     </div>
                     <div class="hover-items">
-                        <h3>Ed-Tech</h3>
+                        <h3>Ed-Tech(Ongoing)</h3>
                         <div class="icons">
                             <a href="#" class="icon">
                                 <i class="fab fa-github"></i>
